--- a/pages/index.html
+++ b/pages/index.html
@@ -58,54 +58,8 @@
       <h1 class="title">Combinam com você</h1>
 
       <div id="carouselExampleIndicators" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="row">
-              <div class="col-md-2">
-                <img
-                  src="https://occ-0-1417-1123.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABVLDgogqpCjno6cUaSzY5WH2ibvqYeN2DYg0B4YBdopFjdc-Apre7z7RY9lg4_hwfXPKjJX8EkWNzwBzNxFyYvUG97IFE44tQgw.webp?r=22b"
-                  class="d-block w-100 img-carousel" alt="Image 1">
-              </div>
-              <div class="col-md-2">
-                <img
-                  src="https://occ-0-1417-1123.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABVLDgogqpCjno6cUaSzY5WH2ibvqYeN2DYg0B4YBdopFjdc-Apre7z7RY9lg4_hwfXPKjJX8EkWNzwBzNxFyYvUG97IFE44tQgw.webp?r=22b"
-                  class="d-block w-100 img-carousel" alt="Image 2">
-              </div>
-              <div class="col-md-2">
-                <img
-                  src="https://occ-0-1417-1123.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABVLDgogqpCjno6cUaSzY5WH2ibvqYeN2DYg0B4YBdopFjdc-Apre7z7RY9lg4_hwfXPKjJX8EkWNzwBzNxFyYvUG97IFE44tQgw.webp?r=22b"
-                  class="d-block w-100 img-carousel" alt="Image 3">
-              </div>
-              <div class="col-md-2">
-                <img
-                  src="https://occ-0-1417-1123.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABVLDgogqpCjno6cUaSzY5WH2ibvqYeN2DYg0B4YBdopFjdc-Apre7z7RY9lg4_hwfXPKjJX8EkWNzwBzNxFyYvUG97IFE44tQgw.webp?r=22b"
-                  class="d-block w-100 img-carousel" alt="Image 4">
-              </div>
-              <div class="col-md-2">
-                <img
-                  src="https://occ-0-1417-1123.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABVLDgogqpCjno6cUaSzY5WH2ibvqYeN2DYg0B4YBdopFjdc-Apre7z7RY9lg4_hwfXPKjJX8EkWNzwBzNxFyYvUG97IFE44tQgw.webp?r=22b"
-                  class="d-block w-100 img-carousel" alt="Image 5">
-              </div>
-              <div class="col-md-2">
-                <img
-                  src="https://occ-0-1417-1123.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABVLDgogqpCjno6cUaSzY5WH2ibvqYeN2DYg0B4YBdopFjdc-Apre7z7RY9lg4_hwfXPKjJX8EkWNzwBzNxFyYvUG97IFE44tQgw.webp?r=22b"
-                  class="d-block w-100 img-carousel" alt="Image 6">
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-            </div>
-          </div>
-        </div>
+        <div class="carousel-indicators"></div>
+        <div class="carousel-inner"></div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
           data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -117,8 +71,8 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
     </article>
+
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -128,6 +82,7 @@
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/f50700485d.js" crossorigin="anonymous"></script>
+  <script src="/scripts/index.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
