--- a/pages/animals.html
+++ b/pages/animals.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Quase Netflix</title>
-  <link rel="icon" href="/assets/netflix-logo.ico">
+  <link rel="icon" href="/assets/logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg nav-transparent">
       <div class="container-fluid px-5 py-2">
         <a href="/pages/index.html">
-          <img src="https://fontmeme.com/permalink/191220/23c21e73bc5321e9d4cd67900457f4b2.png" class="logo-img me-4"
+          <img src="/assets/logo.png" class="logo-img me-4"
             alt="netflix-font">
         </a>
         <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse"
@@ -76,11 +76,9 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
-            <img src="/assets/logo_netflix.png" alt="Footer Image" class="footer-image">
-          </div>
-          <div class="col-md-6">
-            <p class="footer-text">Texto do footer aqui.</p>
+          <div class="col-md-6 d-flex flex-align">
+            <img src="/assets/logo.png" alt="Footer Image" class="footer-image">
+            <p class="footer-text">Projeto HTML + CSS + JavaScript turma 3CTJ - FIAP</p>
           </div>
         </div>
       </div>
