--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Quase Netflix</title>
-  <link rel="icon" href="/assets/netflix-logo.ico">
+  <link rel="icon" href="/assets/logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +27,7 @@
   <nav class="navbar navbar-expand-lg nav-transparent">
     <div class="container-fluid px-5 py-2">
       <a href="/pages/index.html">
-        <img src="https://fontmeme.com/permalink/191220/23c21e73bc5321e9d4cd67900457f4b2.png" class="logo-img me-4"
+        <img src="/assets/logo.png" class="logo-img me-4"
           alt="netflix-font">
       </a>
       <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse"
@@ -57,8 +57,7 @@
         <p>Os porcos adoram banhos de lama não apenas para se refrescar, mas também para proteger sua pele sensível dos
           raios solares e de picadas de insetos. A lama também atua como um protetor natural contra infecções cutâneas.
         </p>
-        <button class="btn btn-light"><i class="fas fa-play me-2"></i> Assistir</button>
-        <button class="btn btn-secondary ms-3"><i class="far fa-clipboard me-2"></i> Mais informações</button>
+        <button class="btn btn-light" id="watch"><i class="fas fa-play me-2"></i> Assistir</button>
       </div>
     </article>
 
@@ -143,10 +142,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="/assets/logo_netflix.png" alt="Footer Image" class="footer-image">
+          <img src="/assets/logo.png" alt="Footer Image" class="footer-image">
         </div>
         <div class="col-md-6">
-          <p class="footer-text">Texto do footer aqui.</p>
+          <p class="footer-text">Projeto HTML + CSS + JavaScript turma 3CTJ - FIAP</p>
         </div>
       </div>
     </div>
