--- a/pages/index.html
+++ b/pages/index.html
@@ -141,10 +141,8 @@
   <footer class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="d-flex justify-content-center align-items-center">
           <img src="/assets/logo.png" alt="Footer Image" class="footer-image">
-        </div>
-        <div class="col-md-6">
           <p class="footer-text">Projeto HTML + CSS + JavaScript turma 3CTJ - FIAP</p>
         </div>
       </div>
