--- a/pages/animals.html
+++ b/pages/animals.html
@@ -29,8 +29,7 @@
     <nav class="navbar navbar-expand-lg nav-transparent">
       <div class="container-fluid px-5 py-2">
         <a href="/pages/index.html">
-          <img src="/assets/logo.png" class="logo-img me-4"
-            alt="netflix-font">
+          <img src="/assets/logo.png" class="logo-img me-4" alt="netflix-font">
         </a>
         <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -76,7 +75,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 d-flex flex-align">
+          <div class="d-flex justify-content-center align-items-center">
             <img src="/assets/logo.png" alt="Footer Image" class="footer-image">
             <p class="footer-text">Projeto HTML + CSS + JavaScript turma 3CTJ - FIAP</p>
           </div>
