--- a/pages/animals.html
+++ b/pages/animals.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Quase Netflix</title>
+  <title>Projeto Animal</title>
   <link rel="icon" href="/assets/logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="d-flex justify-content-center align-items-center">
             <img src="/assets/logo.png" alt="Footer Image" class="footer-image">
-            <p class="footer-text">Projeto HTML + CSS + JavaScript turma 3CTJ - FIAP</p>
+            <p class="footer-text">Projeto HTML + CSS + JavaScript turma 1CTJ - FIAP</p>
           </div>
         </div>
       </div>
